# Cpp23-examples

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme_execution_policy.md  cppcheck.supp  folding.cpp  math.cpp  meson.build  thread_count.cpp  xmake.lua
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cmake.yml  codeql.yml  xmake.yml  xmake.yml.bak
cmake/: compilers.cmake  cpp_filesystem.cmake  cpp_modules.cmake  features.cmake  will_fail.cmake
coroutine/: CMakeLists.txt  co_return.cpp  handle.cpp  yield.cpp
cpp11/: CMakeLists.txt  GetLastError.cpp  current_exception.cpp  getenv.cpp  iota.cpp  nullptr.cpp
cpp14/: CMakeLists.txt  make_unique.cpp  thread_count.cpp
cpp17/: CMakeLists.txt  deduction_guides.cpp  execution_policy.cpp  fallthrough.cpp  filesystem.cpp  folding.cpp  init_if_switch.cpp  math_special_functions.cpp  maybe_unused.cpp  random_string.cpp  sample.cpp  structured_bindings.cpp
cpp20/: CMakeLists.txt  barrier.cpp  bit_width.cpp  coroutine.cpp  execution_policy.cpp  format.cpp  hardware_interference_size.cpp  jthread.cpp  latch.cpp  lerp.cpp  likely.cpp  math_constants.cpp  midpoint.cpp  ranges_find.cpp  semaphore.cpp  smart_ptr_for_overwrite.cpp  source_location.cpp  stop_callback.cpp  stop_source.cpp
cpp20/coroutine/: CMakeLists.txt  co_return.cpp  coroutine_handle.cpp  generator.cpp  handle.cpp  promise.cpp  return.cpp  yield.cpp
cpp20/module/: CMakeLists.txt
cpp23/: CMakeLists.txt  assume.cpp  expected.cpp  flat_map.cpp  flat_set.cpp  format_ranges.cpp  mdspan.cpp  print.cpp  ranges_cartesian_product.cpp  ranges_enumerate.cpp  ranges_iota.cpp  stacktrace.cpp  stdfloat.cpp  unreachable.cpp
cpp26/: CMakeLists.txt  adl_projected.cpp  debugging.cpp  embed.cpp  format_pointer.cpp  linalg.cpp  saturation_arithmetic.cpp
execution_policy/: CMakeLists.txt  Readme.md  adjacent_find.cpp  execution_policy.cpp  randgen.cpp  randgen.h  sort.cpp
filesystem/: CMakeLists.txt  canonical.cxx  filesep.cpp  is_symlink.cpp  meson.build  xmake.lua
modules/: CMakeLists.txt  hello.cpp  main.cpp  math.ixx  xmake.lua
src/: coroutine.cpp  expected.cpp  folding.cpp  likely.cpp  numbers.cpp  print.cpp  unreachable.cpp  xmake.lua
src/filesystem/: canonical_demo.cxx  is_symlink.cpp  meson.build
src/modules/: CMakeLists.txt  math.ixx  xmake.lua
xmake/: tests.lua
